# TeleInfoReader

./: .gitignore  Changelog.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: pre-release.yml  release.yml  test.yml
config/: teleinforeader.service
src/: tele_info_reader.py
src/database/: database_client.py
src/io/: serial_client.py
teleinforeader/: __main__.py  tele_info_reader.py
teleinforeader/database/: database_client.py
teleinforeader/io/: socket_server.py
teleinforeader/model/: tele_info_data.py
teleinforeader/util/: logger.py
test/database/: test_database_client.py
test/model/: test_tele_info_data.py
